--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -33,15 +33,21 @@ jobs:
           else:
             subprocess.call('echo ::set-output name=continue::False', shell=True)
 
-
-      if: steps.vars.outputs.continue == 'True'
-      - name: Generate PYPI
-        run: |
-          echo "ok"
+#        - name: Generate PYPI
+#        if: steps.vars.outputs.continue == 'True'
+#          run: |
+#            echo "ok"
 
 #      - uses: actions/checkout@v2
 #      - uses: casperdcl/deploy-pypi@v1
 #          with:
 #            password: ${{ secrets.pypi_token }}
 #            build: true
-        if: steps.vars.outputs.continue == 'True'
+#        if: steps.vars.outputs.continue == 'True'
+
+  more:
+    runs-on: ubuntu-latest
+    if: steps.vars.outputs.continue == 'True'
+    steps:
+    - name: Print false
+      run: echo "false"
