--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -8,6 +8,14 @@ jobs:
         steps:
             - name: 'Call API'
               uses: indiesdev/curl@v1
+              id: api
+              with:
+                url: https://reqres.in/api/users
+                method: 'POST'
+                accept: 201
+                body: '{ "name": "breeze",  "job": "devops" }'
+            - name: 'Use response'
+              run: echo ${{ steps.api.outputs.response }}
 
     test-II:
         name: 'Perform REST API'
