--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -15,6 +15,13 @@ jobs:
                 accept: 201
                 body: '{ "name": "breeze",  "job": "devops" }'
             - name: 'Use response'
+              uses: indiesdev/curl@v1
+              id: api
+              with:
+                url: https://reqres.in/api/users
+                method: 'POST'
+                accept: 201
+                body: '{ "name": "breeze",  "job": "devops" }'
               if: False
               run: echo ${{ steps.api.outputs.response }}
 
