--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -14,15 +14,11 @@ jobs:
                 method: 'POST'
                 accept: 201
                 body: '{ "name": "breeze",  "job": "devops" }'
+
+            - name: My backup step
               if: False
-              - name: 'Use response'
-                uses: indiesdev/curl@v1
-                id: api
-                with:
-                  url: https://reqres.in/api/users
-                  method: 'POST'
-                  accept: 201
-                  body: '{ "name": "breeze",  "job": "devops" }'
+              uses: actions/heroku@master
+
 
 #    test-II:
 #        name: 'Perform REST APII'
