--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -17,20 +17,7 @@ jobs:
 
             - name: My backup step
               if: False
-              uses: actions/heroku@master
-
-
-#    test-II:
-#        name: 'Perform REST APII'
-#        runs-on: ubuntu-latest
-#        steps:
-#            - name: 'Call API'
-#              uses: indiesdev/curl@v1
-#              id: api
-#              with:
-#                url: https://reqres.in/api/users
-#                method: 'POST'
-#                accept: 201
-#                body: '{ "name": "breeze",  "job": "devops" }'
-#            - name: 'Use response'
-#              run: echo ${{ steps.api.outputs.response }}
+              uses: casperdcl/deploy-pypi@v1
+              with:
+                password: ${{ secrets.pypi_token }}
+                build: true
