--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -6,18 +6,36 @@ jobs:
         name: 'Perform REST API'
         runs-on: ubuntu-latest
         steps:
-            - name: 'Call API'
-              uses: indiesdev/curl@v1
-              id: api
-              with:
-                url: https://reqres.in/api/users
-                method: 'POST'
-                accept: 201
-                body: '{ "name": "breeze",  "job": "devops" }'
+          - name: Check tags on this PR
+            shell: python
+            id: vars
+            env:
+              GITHUB_CONTEXT: ${{ toJson(github) }}
+            run: |
+              import os, json, urllib, subprocess
 
-            - name: My backup step
-              if: False
-              uses: casperdcl/deploy-pypi@v1
-              with:
-                password: ${{ secrets.pypi_token }}
-                build: true
+              context = json.loads(os.environ['GITHUB_CONTEXT'])
+              tag_url = context['event']['repository']['tags_url']
+              tags = json.loads(urllib.urlopen(tag_url).read())
+
+              tagged_sha1 = tags[0]['commit']['sha']
+              tag_name = tags[0]['name']
+
+              default = context['event']['repository']['default_branch']
+              branch = context['ref']
+
+              if default in branch:
+                ids = [x['id'] for x in context['event']['commits']]
+                if tagged_sha1 in ids:
+                  print("tagged ID was in the most recent PR and should be sent to PyPI")
+                  print("Submit", tag_name, " to PyPI")
+                  subprocess.call('echo ::set-output name=continue::True', shell=True)
+              else:
+                subprocess.call('echo ::set-output name=continue::False', shell=True)
+
+                - name: Send to PyPI
+            if: False
+            uses: casperdcl/deploy-pypi@v1
+            with:
+              password: ${{ secrets.pypi_token }}
+              build: true
