--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -29,11 +29,12 @@ jobs:
           branch = context['ref']
           pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
 
-          if default in branch && pattern.match(tag_name):
+          if default in branch:
             if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
-              print("tagged ID was in the most recent PR and should be sent to PyPI")
-              print("Submit", tag_name, " to PyPI")
-              subprocess.call('echo ::set-output name=continue::True', shell=True)
+              if pattern.match(tag_name) == True:
+                print("tagged ID was in the most recent PR and should be sent to PyPI")
+                print("Submit", tag_name, " to PyPI")
+                subprocess.call('echo ::set-output name=continue::True', shell=True)
 
       - name: PyPI release!
         if: steps.vars.outputs.continue == 'True'
