--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -29,6 +29,8 @@ jobs:
           branch = context['ref']
           pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
 
+          print(pattern.match(tag_name))
+
           if default in branch:
             if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
               if pattern.match(tag_name) == True:
