--- a/.github/pypi.yml
+++ b/.github/pypi.yml
@@ -3,11 +3,11 @@
 ##  push:
 ##    tags:
 ##      - v*.*.*
-##jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
+#jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 #      - uses: casperdcl/deploy-pypi@v1
 #        with:
 #          password: ${{ secrets.pypi_token }}
