--- a/.github/workflows/becker.yml
+++ b/.github/workflows/becker.yml
@@ -1,39 +1,39 @@
-name: Python package
-
-on:
-  push:
-    branches:
-      - email
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-        architecture: 'x64'
-    - name: Display Python version
-      run: python -c "import sys; print(sys.version)"
-    - name: Setup pip
-      run: pip install requests
-
-    - name: Send mail
-      uses: dawidd6/action-send-mail@v2
-      with:
-        server_address: smtp.gmail.com
-        server_port: 465
-        username: ${{secrets.MAIL_USERNAME}}
-        password: ${{secrets.MAIL_PASSWORD}}
-        subject: Github Actions job result
-        # Literal body:
-        body: Build job of ${{github.repository}} completed successfully!
-        # Read file contents as body:
-        to: wpalin@gmail.com
-        from: William Palin # <user@example.com>
-        # Optional content type (defaults to text/plain):
-        content_type: text/html
+#name: Python package
+#
+#on:
+#  push:
+#    branches:
+#      - email
+#
+#jobs:
+#  build:
+#
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v2
+#    - name: Set up Python 3.8
+#      uses: actions/setup-python@v2
+#      with:
+#        python-version: '3.8'
+#        architecture: 'x64'
+#    - name: Display Python version
+#      run: python -c "import sys; print(sys.version)"
+#    - name: Setup pip
+#      run: pip install requests
+#
+#    - name: Send mail
+#      uses: dawidd6/action-send-mail@v2
+#      with:
+#        server_address: smtp.gmail.com
+#        server_port: 465
+#        username: ${{secrets.MAIL_USERNAME}}
+#        password: ${{secrets.MAIL_PASSWORD}}
+#        subject: Github Actions job result
+#        # Literal body:
+#        body: Build job of ${{github.repository}} completed successfully!
+#        # Read file contents as body:
+#        to: wpalin@gmail.com
+#        from: William Palin # <user@example.com>
+#        # Optional content type (defaults to text/plain):
+#        content_type: text/html
