--- a/.github/workflows/becker.yml
+++ b/.github/workflows/becker.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-  - name: Send mail
+    - steps:
+    - name: Send mail
     uses: dawidd6/action-send-mail@v2
     with:
       server_address: smtp.gmail.com
