--- a/.github/workflows/becker.yml
+++ b/.github/workflows/becker.yml
@@ -8,19 +8,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    - steps:
-    - name: Send mail
-    uses: dawidd6/action-send-mail@v2
-    with:
-      server_address: smtp.gmail.com
-      server_port: 465
-      username: ${{secrets.MAIL_USERNAME}}
-      password: ${{secrets.MAIL_PASSWORD}}
-      subject: Github Actions job result
-      # Literal body:
-      body: Build job of ${{github.repository}} completed successfully!
-      # Read file contents as body:
-      to: wpalin@gmail.com
-      from: William Palin # <user@example.com>
-      # Optional content type (defaults to text/plain):
-      content_type: text/html
+    steps:
+    - name: Send some mail
+      uses: wadeww/send-email-action@master
+      with:
+        server_address: smtp.gmail.com
+        port: 465
+        username: ${{secrets.MAIL_USERNAME}}
+        password: ${{secrets.MAIL_PASSWORD}}
+        subject: Workflow finished
+        body: Job completed ${{job.status}}
+        to: john@denver.com, elton@john.com
+        from: Me
