--- a/.github/workflows/becker.yml
+++ b/.github/workflows/becker.yml
@@ -18,5 +18,5 @@ jobs:
         password: ${{secrets.MAIL_PASSWORD}}
         subject: Workflow finished
         body: Job completed ${{job.status}}
-        to: john@denver.com, elton@john.com
+        to: wpalin@gmail.com
         from: Me
