--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,6 +21,48 @@ on:
     branches:
       - main
 
+#jobs:
+#  test-I:
+#    name: 'PyPI'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Check Tags
+#        shell: python
+#        id: vars
+#        env:
+#          CONTEXT: ${{ toJson(github) }}
+#        run: |
+#          import os, json, urllib, subprocess, re
+#          subprocess.call('echo ::set-output name=continue::False', shell=True)
+#          context = json.loads(os.environ['CONTEXT'])
+#          tag_url = context['event']['repository']['tags_url']
+#          tags = json.loads(urllib.urlopen(tag_url).read())
+#
+#          tagged_sha1 = tags[0]['commit']['sha']
+#          tag_name = tags[0]['name']
+#
+#          default = context['event']['repository']['default_branch']
+#          branch = context['ref']
+#          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
+#
+#          if default in branch:
+#            if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
+#              if pattern.match(tag_name) is not None:
+#                subprocess.call('echo ::set-output name=continue::True', shell=True)
+#
+#      - name: PyPI release!
+#        if: steps.vars.outputs.continue == 'True'
+#        uses: casperdcl/deploy-pypi@v1
+#        with:
+#          password: ${{ secrets.pypi_token }}
+#          build: true
+#
+#      - name: Not a PyPI release.
+#        if: steps.vars.outputs.continue == 'False'
+#        run: |
+#          echo "Not a PyPI release"
+
+
 jobs:
   test-I:
     name: 'PyPI'
@@ -50,14 +92,17 @@ jobs:
               if pattern.match(tag_name) is not None:
                 subprocess.call('echo ::set-output name=continue::True', shell=True)
 
-      - name: PyPI release!
-        if: steps.vars.outputs.continue == 'True'
-        uses: casperdcl/deploy-pypi@v1
-        with:
-          password: ${{ secrets.pypi_token }}
-          build: true
-
-      - name: Not a PyPI release.
-        if: steps.vars.outputs.continue == 'False'
-        run: |
-          echo "Not a PyPI release"
+        if: 1 == 1
+        run |
+          print("OKKOKOOK")
+#      - name: PyPI release!
+#        if: steps.vars.outputs.continue == 'True'
+#        uses: casperdcl/deploy-pypi@v1
+#        with:
+#          password: ${{ secrets.pypi_token }}
+#          build: true
+#
+#      - name: Not a PyPI release.
+#        if: steps.vars.outputs.continue == 'False'
+#        run: |
+#          echo "Not a PyPI release"
