--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -76,21 +76,22 @@ jobs:
         run: |
           import os, json, urllib, subprocess, re
           subprocess.call('echo ::set-output name=continue::False', shell=True)
-          context = json.loads(os.environ['CONTEXT'])
-          tag_url = context['event']['repository']['tags_url']
-          tags = json.loads(urllib.urlopen(tag_url).read())
-
-          tagged_sha1 = tags[0]['commit']['sha']
-          tag_name = tags[0]['name']
-
-          default = context['event']['repository']['default_branch']
-          branch = context['ref']
-          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
-
-          if default in branch:
-            if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
-              if pattern.match(tag_name) is not None:
-                subprocess.call('echo ::set-output name=continue::True', shell=True)
+          exit()
+#          context = json.loads(os.environ['CONTEXT'])
+#          tag_url = context['event']['repository']['tags_url']
+#          tags = json.loads(urllib.urlopen(tag_url).read())
+#
+#          tagged_sha1 = tags[0]['commit']['sha']
+#          tag_name = tags[0]['name']
+#
+#          default = context['event']['repository']['default_branch']
+#          branch = context['ref']
+#          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
+#
+#          if default in branch:
+#            if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
+#              if pattern.match(tag_name) is not None:
+#                subprocess.call('echo ::set-output name=continue::True', shell=True)
 
         if: 1 == 1
         run |
