--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,34 +21,45 @@ on:
     branches:
       - main
 
-#jobs:
-#  test-I:
-#    name: 'PyPI'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Check Tags
-#        shell: python
-#        id: vars
-#        env:
-#          CONTEXT: ${{ toJson(github) }}
-#        run: |
-#          import os, json, urllib, subprocess, re
-#          subprocess.call('echo ::set-output name=continue::False', shell=True)
-#          context = json.loads(os.environ['CONTEXT'])
-#          tag_url = context['event']['repository']['tags_url']
-#          tags = json.loads(urllib.urlopen(tag_url).read())
-#
-#          tagged_sha1 = tags[0]['commit']['sha']
-#          tag_name = tags[0]['name']
-#
-#          default = context['event']['repository']['default_branch']
-#          branch = context['ref']
-#          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
-#
-#          if default in branch:
-#            if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
-#              if pattern.match(tag_name) is not None:
-#                subprocess.call('echo ::set-output name=continue::True', shell=True)
+jobs:
+  test-I:
+    name: 'PyPI'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Tags
+        shell: python
+        id: tags
+        continue-on-error: true
+        env:
+          CONTEXT: ${{ toJson(github) }}
+        run: |
+          import os, json, urllib, subprocess, re
+          context = json.loads(os.environ['CONTEXT'])
+          tag_url = context['event']['repository']['tags_url']
+          tags = json.loads(urllib.urlopen(tag_url).read())
+
+          tagged_sha1 = tags[0]['commit']['sha']
+          tag_name = tags[0]['name']
+
+          default = context['event']['repository']['default_branch']
+          branch = context['ref']
+          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
+
+          if default in branch:
+            if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
+              if pattern.match(tag_name) is not None:
+                continue
+
+          raise("Not a release")
+
+      - name: Check on failures
+        if: job.steps.tags.status == failure()
+        run: echo "adfasdfasdfasdfadsf"
+
+      - name: Check not on failures
+        if: job.steps.tags.status == success()
+        run: echo "adfasdfasdfasdfadsf"
+
 #
 #      - name: PyPI release!
 #        if: steps.vars.outputs.continue == 'True'
@@ -63,27 +74,26 @@ on:
 #          echo "Not a PyPI release"
 
 
-jobs:
-  test-I:
-    name: 'PyPI'
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check Tags
-        shell: python
-        id: hello
-        continue-on-error: true
-        env:
-          CONTEXT: ${{ toJson(github) }}
-        run: |
-          import os, json, urllib, subprocess, re
-          print("OKKOKO")
-          raise("error")
-
-      - name: Not a PyPI release.
-        if: failure()
-        run: |
-          echo "Not a PyPI release"
-
-      - name: Check on failures
-        if: job.steps.hello.status == failure()
-        run: echo "adfasdfasdfasdfadsf"
+#jobs:
+#  test-I:
+#    name: 'PyPI'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Check Tags
+#        shell: python
+#        id: hello
+#        continue-on-error: true
+#        env:
+#          CONTEXT: ${{ toJson(github) }}
+#        run: |
+#          import os, json, urllib, subprocess, re
+#          raise("error")
+#
+#      - name: Not a PyPI release.
+#        if: failure()
+#        run: |
+#          echo "Not a PyPI release"
+#
+#      - name: Check on failures
+#        if: job.steps.hello.status == failure()
+#        run: echo "adfasdfasdfasdfadsf"
