--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -45,11 +45,13 @@ jobs:
           branch = context['ref']
           pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
 
-          if default in branch:
-            if tagged_sha1 in [x['id'] for x in context['event']['commits']]:
-              if pattern.match(tag_name) is not None:
-                continue
-          raise("Not a release")
+          if default not in branch:
+            raise("Not a release")
+          if tagged_sha1 in [x['id'] for x not in context['event']['commits']]:
+            raise("Not a release")
+          if pattern.match(tag_name) is None:
+            raise("Not a release")
+
 
       - name: Check on failures
         if: job.steps.tags.status == failure()
