--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,17 +41,15 @@ jobs:
           tagged_sha1 = tags[0]['commit']['sha']
           tag_name = tags[0]['name']
 
-          default = context['event']['repository']['default_branch']
-          branch = context['ref']
           pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
-
-          if tagged_sha1 not in [x['id'] for x in context['event']['commits']]:
-            raise("Not tagged")
           if pattern.match(tag_name) is None:
             raise("Tag doesnt match")
 
+          if tagged_sha1 not in [x['id'] for x in context['event']['commits']]:
+            raise("Not tagged")
+
       - name: Check not on failures
-        if: ${{ success() }}
+        if: success()
         run: echo "adfasdfasdfasdfadsf"
 
 
