--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -35,7 +35,8 @@ jobs:
         run: |
           import os, json, urllib, subprocess, re
           context = json.loads(os.environ['CONTEXT'])
-          my_vars = {'FOO': 'bar'}
-          os.environ.update(my_vars)
-          print(os.environ['FOO'])
+          print(content)
+#          my_vars = {'FOO': 'bar'}
+#          os.environ.update(my_vars)
+#          print(os.environ['FOO'])
 
