--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,4 +40,8 @@ jobs:
           my_vars = {'FOO': 'bar'}
           os.environ.update(my_vars)
           print(os.environ['FOO'])
-
+      - name: IFNOW
+        id: ifwhen
+        run: |
+          print(os.environ('FOO'))
+        shell: python
