--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -42,6 +42,9 @@ jobs:
           print(os.environ['FOO'])
       - name: IFNOW
         id: ifwhen
+        env:
+          FOO: ${{ FOO }}
+
         run: |
           import os
           print(os.environ('FOO'))
