--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -44,4 +44,7 @@ jobs:
         id: ifwhen
 
         run: |
-          echo "${{ steps.tags.FOO }}"
+          echo "${{ steps.tags.conclusion }}"
+          echo "${{ steps.tags.output }}"
+          echo "${{ steps.tags.outcome }}"
+          echo "${{ steps.tags.outputs.FOO }}"
