--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -40,6 +40,7 @@ jobs:
           my_vars = {'FOO': 'bar'}
           os.environ.update(my_vars)
           print(os.environ['FOO'])
+          raise("this is an error")
       - name: IFNOW
         id: ifwhen
 
