--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -43,7 +43,7 @@ jobs:
           raise("this is an error")
       - name: IFNOW
         id: ifwhen
-        if: "${{ steps.tags.outcome }}" == "failure"
+        if: ${{ steps.tags.outcome }}
         run: |
           echo "${{ steps.tags.conclusion }}"
           echo "${{ steps.tags.output }}"
