--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -62,3 +62,5 @@ jobs:
         if: steps.vars.outputs.HIT != 'True'
         run: |
           echo "Not a PyPI release"
+          echo "{{ steps.vars.outputs.HIT }}"
+          echo "${{ steps.vars.outputs.HIT }}"
