--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,39 +28,47 @@ jobs:
     name: 'PyPI'
     runs-on: ubuntu-latest
     steps:
-      - name: Check Tags
-        shell: python
-        id: vars
-        env:
-          CONTEXT: ${{ toJson(github) }}
-        run: |
-          import os, json, urllib, subprocess, re
+      - name: Set selected color
+        run: echo '::set-output name=SELECTED_COLOR::green'
+        id: random-color-generator
+      - name: Get color
+        run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
 
-          subprocess.call('echo ::set-output name=continue::False', shell=True)
-          context = json.loads(os.environ['CONTEXT'])
 
-          print(context)
 
-          tag_url = context['event']['repository']['tags_url']
-          tags = json.loads(urllib.urlopen(tag_url).read())
-
-          tagged_sha1 = tags[0]['commit']['sha']
-          tag_name = tags[0]['name']
-          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
-          subprocess.call('echo ::set-output name=HIT::True', shell=True)
-
-      - name: PyPI release!
-        if: steps.vars.outputs.HIT == 'True'
-        run: |
-          echo "a PyPI release"
-#        uses: casperdcl/deploy-pypi@v1
-#        with:
-#          password: ${{ secrets.pypi_token }}
-#          build: true
-
-      - name: Not a PyPI release.
-        if: steps.vars.outputs.HIT != 'True'
-        run: |
-          echo "Not a PyPI release"
-          echo "{{ steps.vars.outputs.HIT }}"
-          echo "${{ steps.vars.outputs.HIT }}"
+#      - name: Check Tags
+#        shell: python
+#        id: vars
+#        env:
+#          CONTEXT: ${{ toJson(github) }}
+#        run: |
+#          import os, json, urllib, subprocess, re
+#
+#          subprocess.call('echo ::set-output name=continue::False', shell=True)
+#          context = json.loads(os.environ['CONTEXT'])
+#
+#          print(context)
+#
+#          tag_url = context['event']['repository']['tags_url']
+#          tags = json.loads(urllib.urlopen(tag_url).read())
+#
+#          tagged_sha1 = tags[0]['commit']['sha']
+#          tag_name = tags[0]['name']
+#          pattern = re.compile("^v\d{1,2}\.\d{1,2}\.\d{1,2}")
+#          subprocess.call('echo ::set-output name=HIT::True', shell=True)
+#
+#      - name: PyPI release!
+#        if: steps.vars.outputs.HIT == 'True'
+#        run: |
+#          echo "a PyPI release"
+##        uses: casperdcl/deploy-pypi@v1
+##        with:
+##          password: ${{ secrets.pypi_token }}
+##          build: true
+#
+#      - name: Not a PyPI release.
+#        if: steps.vars.outputs.HIT != 'True'
+#        run: |
+#          echo "Not a PyPI release"
+#          echo "{{ steps.vars.outputs.HIT }}"
+#          echo "${{ steps.vars.outputs.HIT }}"
