--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,11 +28,14 @@ jobs:
     name: 'PyPI'
     runs-on: ubuntu-latest
     steps:
-      - name: Set selected color
+      - name: Set tags
         run: echo '::set-output name=SELECTED_COLOR::green'
-        id: random-color-generator
+        shell: python
+        id: tags
+
       - name: Get color
-        run: echo "The selected color is ${{ steps.random-color-generator.outputs.SELECTED_COLOR }}"
+        if: steps.tags.outputs.SELECTED_COLOR == 'green'
+        run: echo "The selected color is ${{ steps.tags.outputs.SELECTED_COLOR }}"
 
 
 
