--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -56,11 +56,11 @@ jobs:
         id: tags
         shell: python
 
-      - name: Get color
+      - name: No PyPI release
         if: steps.tags.outputs.SELECTED_COLOR == 'green'
         run: echo "The selected color is ${{ steps.tags.outputs.SELECTED_COLOR }}"
 
-      - name: Get red
+      - name: PyPI Release
         if: steps.tags.outputs.SELECTED_COLOR == 'red'
         run: echo "The selected color is ${{ steps.tags.outputs.SELECTED_COLOR }}"
 
